src/assets/css/template.css
/* ... */
.module.module-divider-top,
.module-sm.module-divider-top {
  border-top: 1px solid #f2f2f2;
}

.module.module-divider-bottom,
.module-sm.module-divider-bottom {
  border-bottom: 1px solid #f2f2f2;
}

@media (max-width: 991px) {
  .module:nth-child(2) {
    background-color: #fff;
    padding: 120px 0 100px;
  }
}

@media (min-width: 992px) {
  .module {
    background-color: #fff;
    padding: 120px 0 100px;
  }
}

.module.module-gray,
.module-sm.module-gray {
  background-color: #f7f7f7;
}

.module.module-dark,
.module-sm.module-dark {
  background-color: #000;
}

.module-sm {
  padding: 60px 0 40px;
}

.parallax {
  background-color: transparent !important;
}

.m-title {
  margin: 0 0 30px;
}

.m-title > *:last-child {
  margin-bottom: 0;
}

.m-title h2 {
  margin: 0 0 10px;
}

.m-title h6 {
  font-size: 10px;
  color: #9b9b9b;
}

.m-title.l-align {
  text-align: left;
}

.m-title.c-align {
  text-align: center;
}

.m-title.r-align {
  text-align: right;
}

.bg-gradient:after {
  position: absolute;
  height: 100%;
  width: 100%;
  z-index: -1;
}

.bg-dark-30:before,
.bg-dark-60:before,
.bg-dark-90:before,
.bg-light-30:before,
.bg-light-60:before,
.bg-light-90:before {
  position: absolute;
  height: 100%;
  width: 100%;
  z-index: 0;
}

.bg-dark-30:before {
  background: rgba(0, 0, 0, 0.3);
  content: "";
  left: 0;
  top: 0;
}

.bg-dark-60:before {
  background: rgba(0, 0, 0, 0.6);
  content: "";
  left: 0;
  top: 0;
}

.bg-dark-90:before {
  background: rgba(0, 0, 0, 0.9);
  content: "";
  left: 0;
  top: 0;
}

.bg-light-30:before {
  background: rgba(255, 255, 255, 0.3);
  content: "";
  left: 0;
  top: 0;
}

.bg-light-60:before {
  background: rgba(255, 255, 255, 0.6);
  content: "";
  left: 0;
  top: 0;
}

.bg-light-90:before {
  background: rgba(255, 255, 255, 0.9);
  content: "";
  left: 0;
  top: 0;
}

.bg-gradient:after {
  background: radial-gradient(
    left top,
    circle farthest-corner,
    #0cb4ce 9%,
    #006cff 48%,
    #6442ff 91%
  );
  background: -webkit-radial-gradient(
    left top,
    circle cover,
    #0cb4ce 9%,
    #006cff 48%,
    #6442ff 91%
  );
  opacity: 0.9;
  content: "";
  left: 0;
  top: 0;
}

/*------------------------------------------------------------------
[Portfolio filter]
*/

.filters {
  text-align: center;
  list-style: none;
  padding: 0;
  margin: 0 0 30px;
}

.filters > li {
  display: inline-block;
  margin: 0 18px 10px 18px;
}

.filters > li a {
  color: #202020;
  color: #828282;
  opacity: 0.8;
}

.filters > li a:hover,
.filters > li a.current {
  opacity: 1;
  color: #e41919;
}

@media (max-width: 767px) {
  .filters > li {
    display: block;
  }
}

/*------------------------------------------------------------------
[Portfolio grid]
*/

.row-portfolio .grid-sizer,
.row-portfolio .portfolio-item {
  width: 33.333333%;
  padding: 20px;
  float: left;
}

.row-portfolio .grid-sizer.large,
.row-portfolio .portfolio-item.large {
  width: 66.666666%;
}

.row-portfolio[data-columns="4"] .grid-sizer,
.row-portfolio[data-columns="4"] .portfolio-item {
  width: 25%;
}

.row-portfolio[data-columns="4"] .grid-sizer.large,
.row-portfolio[data-columns="4"] .portfolio-item.large {
  width: 50%;
}

/*------------------------------------------------------------------
[Portfolio Single Item]
*/

.portfolio-item {
  float: left;
  width: 100%;
  margin-bottom: -1px;
}

.portfolio-item .portfolio-img-wrap {
  background-size: cover;
  background-position: 50%;
  position: relative;
  padding-top: 100%;
  padding-bottom: 1px;
}

.portfolio-item.large .portfolio-img-wrap {
  padding-bottom: 0;
}

.portfolio-wrapper {
  position: relative;
  overflow: hidden;
}

.portfolio-wrapper .portfolio-img-wrap {
  transition: all 0.3s cubic-bezier(0.3, 0.1, 0.58, 1);
}

.portfolio-overlay {
  position: absolute;
  background: rgba(30, 30, 30, 0.5);
  opacity: 0;
  z-index: 1;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  padding: 0;
  margin: 0;
  transition: all 0.3s cubic-bezier(0.3, 0.1, 0.58, 1);
}

.portfolio-caption {
  position: absolute;
  width: 100%;
  left: 0;
  top: 50%;
  opacity: 0;
  z-index: 1;
  text-align: center;
  padding: 20px 30px;
  transition: all 0.3s cubic-bezier(0.3, 0.1, 0.58, 1);
}

.portfolio-title {
  letter-spacing: 3.8px;
  font-size: 14px;
  color: #fff;
  margin: 0 0 8px;
}

.portfolio-subtitle {
  color: #fff;
  display: block;
  font-size: 10px;
  opacity: 0.7;
}

.portfolio-link {
  position: absolute;
  z-index: 3;
  bottom: 0;
  right: 0;
  left: 0;
  top: 0;
}

.portfolio-item:hover .portfolio-wrapper {
  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
}

.portfolio-item:hover .portfolio-overlay {
  opacity: 1;
}

.portfolio-item:hover .portfolio-caption {
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
  opacity: 1;
}

@media (max-width: 1199px) {
  .row-portfolio .grid-sizer,
  .row-portfolio .portfolio-item,
  .row-portfolio[data-columns="4"] .grid-sizer,
  .row-portfolio[data-columns="4"] .portfolio-item,
  .row-portfolio[data-columns="5"] .grid-sizer,
  .row-portfolio[data-columns="5"] .portfolio-item {
    width: 33.333333%;
  }

  .row-portfolio .grid-sizer.large,
  .row-portfolio .portfolio-item.large,
  .row-portfolio[data-columns="4"] .grid-sizer.large,
  .row-portfolio[data-columns="4"] .portfolio-item.large,
  .row-portfolio[data-columns="5"] .grid-sizer.large,
  .row-portfolio[data-columns="5"] .portfolio-item.large {
    width: 66.666666%;
  }
}
/* ... */

